fixed excessive whitespace on mobile

--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -3,6 +3,9 @@
   margin-left: auto;
   margin-right: auto;
   padding: 50px 25px;
+  @media (max-width: 768px) {
+    padding: 10px 25px 50px 25px;
+  }
 }
 
 .contact-text {
