--- a/src/app/components/project-list/project-list.component.scss
+++ b/src/app/components/project-list/project-list.component.scss
@@ -4,20 +4,13 @@
   margin-left: auto;
   margin-right: auto;
   padding: 50px 25px;
+  @media (max-width: 768px) {
+    padding: 10px 25px;
+  }
 }
 
 .project-text {
-  margin-top: 50px;
-  //width: 70%;
-
-  @media (max-width: 768px) {
-    //width: 90%;
-  }
   .section-description {
     margin: 20px 0;
   }
-}
-
-.project-list {
-  //margin-top: -50px;
 }
