--- a/src/app/components/project-list/project/project.component.scss
+++ b/src/app/components/project-list/project/project.component.scss
@@ -7,7 +7,7 @@
 
   @media (max-width: 768px) {
     flex-direction: column;
-    margin: 150px auto;
+    margin: 50px auto;
   }
 
   .details {
